apply plugin: 'com.android.application'

android {
    compileSdkVersion 36
    buildToolsVersion "33.0.2"
    namespace "com.denofdevelopers.weatherapp"
    defaultConfig {
        applicationId "com.denofdevelopers.weatherapp"
        minSdkVersion 21
        targetSdkVersion 36
        versionCode 2
        versionName "1.1"
        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
    }
    buildTypes {
        release {
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
        }
    }

    buildFeatures {
        buildConfig = true
    }

    flavorDimensions "env"
    productFlavors {

        dev {
            applicationIdSuffix ".dev"
            resValue "string", "app_name", "WeatherApp DEV"
            dimension "env"
            buildConfigField("String", "API_BASE_URL", "\"http://api.openweathermap.org/data/2.5/\"")
        }

        prod {
            resValue "string", "app_name", "WeatherApp"
            dimension "env"
            buildConfigField("String", "API_BASE_URL", "\"http://api.openweathermap.org/data/2.5/\"")
        }
    }

    compileOptions {
        sourceCompatibility JavaVersion.VERSION_17
        targetCompatibility JavaVersion.VERSION_17
    }
}

dependencies {
    implementation fileTree(dir: 'libs', include: ['*.jar'])
    implementation 'androidx.appcompat:appcompat:1.7.0'
    implementation 'androidx.activity:activity:1.9.3'
    implementation 'androidx.constraintlayout:constraintlayout:2.2.1'
    implementation 'com.google.android.material:material:1.12.0'
    testImplementation 'junit:junit:4.13.2'
    androidTestImplementation 'androidx.test:runner:1.6.2'
    androidTestImplementation 'androidx.test.espresso:espresso-core:3.6.1'

    //ButterKnife
    implementation 'com.jakewharton:butterknife:10.1.0'
    annotationProcessor 'com.jakewharton:butterknife-compiler:10.1.0'

    // Retrofit 2
    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
    implementation 'com.squareup.retrofit2:converter-gson:2.6.1'
    implementation 'com.jakewharton.retrofit:retrofit2-rxjava2-adapter:1.0.0'

    // RxJava 2
    implementation 'io.reactivex.rxjava2:rxandroid:2.1.0'
    implementation 'io.reactivex.rxjava2:rxjava:2.2.11'

    // Dagger 2
    implementation 'com.google.dagger:dagger:2.28.3'
    annotationProcessor 'com.google.dagger:dagger-compiler:2.24'

    // OkHTTP
    implementation 'com.squareup.okhttp3:okhttp:4.10.0'
    implementation 'com.squareup.okhttp3:logging-interceptor:4.10.0'

    // Timber
    implementation 'com.jakewharton.timber:timber:4.7.1'

    // EventBus
    implementation 'org.greenrobot:eventbus:3.1.1'

    // Google location services
    implementation "com.google.android.gms:play-services-location:21.3.0"
}

tasks.withType(JavaCompile).configureEach{options.fork = true
    options.forkOptions.jvmArgs +=[
            '--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED',
            '--add-exports=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED',
            '--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED']}
